--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "books",
     "scripts": {
-        "docs:dev": "vuepress dev",
-        "docs:build": "vuepress build"
+        "dev": "vuepress dev docs",
+        "build": "vuepress build docs"
     },
     "devDependencies": {
         "vuepress": "^0.14.9"
